// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LeaveDatesAlert renders 7 day waiting period when showWaitingDayPeriod is true 1`] = `
<div
  class="usa-alert__body"
>
  <h2
    class="usa-alert__heading font-heading-md text-bold"
    id="mock-unique-id"
  >
    Your 7-day waiting period dates
  </h2>
  <div
    class="usa-alert__text"
  >
    1/31/2021 to 2/6/2021
  </div>
</div>
`;

exports[`LeaveDatesAlert renders Alert with given dates 1`] = `
<div
  aria-labelledby="mock-unique-id"
  class="usa-alert usa-alert--info usa-alert--no-icon c-alert--neutral margin-top-2 margin-bottom-4"
  role="region"
  tabindex="-1"
>
  <div
    class="usa-alert__body"
  >
    <h2
      class="usa-alert__heading font-heading-md text-bold"
      id="mock-unique-id"
    >
      Your leave dates for paid leave from PFML
    </h2>
    <div
      class="usa-alert__text"
    >
      1/1/2021 to 1/30/2021
    </div>
  </div>
</div>
`;
